--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,54 @@
 /* style for the body */
+/*body {
+    text-align: center;
+}*/
+
 body {
     text-align: center;
+}
+
+.heading {
+    font-family: 'Shrikhand', cursive;
+}
+
+.simple-text {
+    font-family: 'Shadows Into Light', cursive;
+    font-size: 1.5rem;
+}
+
+.button {
+    font-family: 'Shadows Into Light', cursive;
+    font-size: 1.2rem;
+}
+
+/* styling for modal */
+
+.modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(1.1);
+    transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
+}
+
+.modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 1rem 1.5rem;
+    width: 24rem;
+    border-radius: 0.5rem;
+}
+.show-modal {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1.0);
+    transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
